# numerical_performance

./: .gitignore  README.rst  test.ps1  test.sh
c_simd/: build.ps1  main.c  run.ps1
java_jni/: README.rst  com_keylane_JniTest.h  pom.xml
java_jni/src/com/keylane/: JniTest.java
rust_0naive/: Cargo.toml  dump.asm
rust_0naive/.cargo/: config
rust_0naive/src/: main.rs
rust_1index/: Cargo.toml  dump.asm
rust_1index/.cargo/: config
rust_1index/src/: main.rs
rust_1opt/src/: main.rs
rust_2simd/: Cargo.toml
rust_2simd/src/: benchmark.rs  bin.rs  lib.rs  main.rs
rust_2unroll/: Cargo.toml  dump.asm
rust_2unroll/src/: main.rs
rust_3indep/: Cargo.toml
rust_3layout/: Cargo.toml  dump.asm
rust_3layout/src/: main.rs
rust_3par/: Cargo.toml
rust_3par/.cargo/: config
rust_3par/src/: bin.rs  jni_wrap.rs  lib.rs
rust_3simd/: Cargo.toml
rust_3simd/src/: bin.rs
rust_4indep/: dump.asm
rust_4indep/src/: main.rs
rust_4par/: Cargo.toml
rust_4par/src/: bin.rs  lib.rs
rust_4simd/: Cargo.toml
rust_5par/: Cargo.toml
rust_5par/src/: bin.rs
rust_5simd/: Cargo.toml  dump.asm
rust_5simd/src/: bin.rs  lib.rs
rust_6par/: Cargo.toml  dump.asm
rust_6par/src/: bin.rs  jni_wrap.rs  lib.rs
rust_naive/src/: main.rs
rust_opt/: Cargo.toml
rust_opt/.cargo/: config
rust_opt/src/: main.rs
rust_simd/: Cargo.toml
rust_simd/src/: main.rs
rust_unsafe/: Cargo.toml
rust_unsafe/src/: main.rs
