
[package]
name = "rust_simd"
version = "0.1.0"
authors = ["Mark Verleg <Mark.Verleg@keylane.com>"]
edition = "2018"

[lib]
name = "matmullib"
path = "src/lib.rs"

[[bin]]
name = "matmul"
path = "src/bin.rs"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[profile.release]
debug = true
lto = true
codegen-units = 1

# See more keys and their definitions at ht§tps://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faster = { version = "^0.5.0", git = "https://github.com/AdamNiederer/faster" }
rayon = { version = "^1.3.0" }
par-array-init = "^0.0.5"

[dev-dependencies]
criterion = "0.3.0"
