
[package]
name = "num_perf_demo"
version = "0.1.0"
authors = ["Mark Verleg <Mark.Verleg@keylane.com>"]
edition = "2018"

[lib]
name = "num_perf_demo"
path = "src/lib.rs"

[[bin]]
name = "matmul"
path = "src/bin.rs"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1

[dependencies]
faster = { version = "^0.5.0", git = "https://github.com/AdamNiederer/faster" }

[dev-dependencies]
criterion = "^0.3.0"
